branches/threaded2/examples/threaded/mforest/mforest.out
1
1
1
1
1
scurrent offset is 0 bytes 
trying to write 2 bytes 
scurrent sbuffend is at 0 bytes 
master increasing master slave buffer for pair 0  1
 new sbuffend is at 499 bytes 
line 244, file mforest.cpp, i = 1, nsteps = 8
line 246, file mforest.cpp, i = 1, a =  0.04 0.1 0.2 0.4 0.8
line 248, file mforest.cpp, i = 1, a_index = 1
scurrent offset is 0 bytes 
trying to write 2 bytes 
scurrent sbuffend is at 0 bytes 
master increasing master slave buffer for pair 0  2
 new sbuffend is at 499 bytes 
line 244, file mforest.cpp, i = 2, nsteps = 8
line 246, file mforest.cpp, i = 2, a =  0.04 0.1 0.2 0.4 0.8
line 248, file mforest.cpp, i = 2, a_index = 2
scurrent offset is 0 bytes 
trying to write 2 bytes 
scurrent sbuffend is at 0 bytes 
master increasing master slave buffer for pair 0  3
 new sbuffend is at 499 bytes 
line 244, file mforest.cpp, i = 3, nsteps = 8
line 246, file mforest.cpp, i = 3, a =  0.04 0.1 0.2 0.4 0.8
line 248, file mforest.cpp, i = 3, a_index = 3
scurrent offset is 0 bytes 
trying to write 2 bytes 
scurrent sbuffend is at 0 bytes 
master increasing master slave buffer for pair 0  4
 new sbuffend is at 499 bytes 
line 244, file mforest.cpp, i = 4, nsteps = 8
line 246, file mforest.cpp, i = 4, a =  0.04 0.1 0.2 0.4 0.8
line 248, file mforest.cpp, i = 4, a_index = 4
scurrent offset is 0 bytes 
trying to write 2 bytes 
scurrent sbuffend is at 0 bytes 
master increasing master slave buffer for pair 0  5
 new sbuffend is at 499 bytes 
line 244, file mforest.cpp, i = 5, nsteps = 8
line 246, file mforest.cpp, i = 5, a =  0.04 0.1 0.2 0.4 0.8
line 248, file mforest.cpp, i = 5, a_index = 5
line 144, file mforest.cpp, tptr->thread_no = 3, tf.a_index = 0
line 107, file mforest.cpp, a_index = 3
line 146, file mforest.cpp, tptr->thread_no = 3, tf.a_index = 3
line 144, file mforest.cpp, tptr->thread_no = 4, tf.a_index = 0
line 144, file mforest.cpp, tptr->thread_no = 5, tf.a_index = 0
line 144, file mforest.cpp, tptr->thread_no = 2, tf.a_index = 0
line 144, file mforest.cpp, tptr->thread_no = 1, tf.a_index = -173951104
line 107, file mforest.cpp, a_index = 4
line 107, file mforest.cpp, a_index = 5
line line 107, file 146mforest.cpp, file , mforest.cppa_index = , 2tptr->thread_no = 4, 
tf.a_index = 4
line 146, file mforest.cpp, tptr->thread_no = 5, tf.a_index = 5
line 146, file mforest.cpp, tptr->thread_no = 2, tf.a_index = 2
line 107, file mforest.cpp, a_index = 1
line 146, file mforest.cpp, tptr->thread_no = 1, tf.a_index = 1
line 252, file mforest.cpp, sleep(1) = 0
line 152, file mforest.cpp, lflag = 0
line 152line , file 152, file mforest.cpp, lflag = 0
line 152, file mforest.cpp, lflag = 0
line 152, file mforest.cpp, lflag = 0
mforest.cpp, lflag = 0
line line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 706, , file s = mforest.cpp, x = 2.2703
line 70, file mforest.cpp, x = 4.5, s = 1.8627
line 70, file mforest.cpp, x = 3.75, s = 1.8674
6line 70, file mforest.cpp, x = 3.375, s = 1.869, 
line 70, file mforest.cpp, x = s = 6line 62.4986, s = , 70
s = , file mforest.cpp2.7161
line 70, file mforest.cpp, x = 4.5, s = 2.2288line 70, file mforest.cpp, x = 3.1875, s = 1.8694
1.7026
line 70
, file mforest.cpp, x = line 4.5, s = 70, file mforest.cpp, x = 2.0499
, x = line line 70, file mforest.cpp, x = 70, file mforest.cpp6, , s = x = 3.75, s = 3.754.51.9951, s = , 
s = 2.0551
2.2344
line 70, file mforest.cpp, x = 3.375, s = 2.0568line 
line 70, file line 1.3989
7070line 70, file mforest.cpp, x = , file mforest.cpp, x = , file mforest.cpp3.1875, s = , x = mforest.cpp, x = 2.05733.0938, 
s = 3.375, s = 2.2363
line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 4.5line 70, file mforest.cpp, x = 3.1875, s = 3.75, , s = s = 2.23683.0938
, s = 1.8695
2.0574
1.4024line 70, file mforest.cpp, x = 
3.0938, s = 1.63762.237
line 70, file mforest.cpp, x = 
3.0469, s = 1.8695
line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 3.375, s = 1.4036
line 70, file mforest.cpp, x = 3.753.0469, , s = s = 2.0575
1.6417
line 70, file mforest.cpp, x = 3.1875, s = 1.404
line 70, file mforest.cpp, x = line 3.375, 70s = , file mforest.cpp, x = 1.6431
line 70, file mforest.cpp, x = 3.04693.0234, s = , s = 1.8695
line 70, file mforest.cpp2.237, 
line 70, file mforest.cpp, x = line 156, file mforest.cpp, Integral = x = 3.1875, s = 1.8695
1.6435
3.0938, s = 1.404
line 70, file mforest.cpp, x = 3.0938, s = 1.6436
line 70, file mforest.cpp, x = 3.0234, s = 2.0575
line 156, file mforest.cpp, Integral = 2.0575
line 70, file mforest.cpp, x = 3.0469, s = 1.4041
line 70, file mforest.cpp, x = 3.0469, s = 1.6436
line 70, file mforest.cpp, x = 3.0234, s = 2.237
line 156, file mforest.cpp, Integral = 2.237
line 70, file mforest.cpp, x = 3.0234, s = 1.4041
line 70, file mforest.cpp, x = line 156, file mforest.cpp, Integral = 3.0234, s = 1.4041
1.6436
line 156, file mforest.cpp, Integral = 1.6436
line 293, file mforest.cpp, sleep(1) = 0
line 300, file mforest.cpp, Integral = 2.237
line 300, file mforest.cpp, Integral = 2.0575
line 300, file mforest.cpp, Integral = 1.8695
line 300, file mforest.cpp, Integral = 1.6436
line 300, file mforest.cpp, Integral = 1.4041
line 305, file mforest.cpp, S =  2.237 2.0575 1.8695 1.6436 1.4041
line 314, file mforest.cpp, f = 833.97

Initial statistics: 2 variables; iteration 0; function evaluation 0; phase 1
Function value   8.3397334e+02; maximum gradient component mag  -2.5485e+03
Var   Value    Gradient   |Var   Value    Gradient   |Var   Value    Gradient   
  1  0.39307 -2.54847e+03 |  2 -0.16086  7.50093e-01 |
line 152, file mforest.cpp, lflag = 0
line 152line , file 152, file mforest.cpp, mforest.cpplflag = , lflag = 00line 
line 152152, file mforest.cpp, lflag = 0

, file line 70, file mforest.cpp, x = 6, s = 2.2703
line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = mforest.cpp, lflag = 60, 
line 70, file mforest.cpp, x = 6, s = 2.7161
line 70, file mforest.cpp, 4.5, s = s = 1.8626
line 70, file mforest.cpp, x = line 3.75, s = 1.8673
line 70, file mforest.cpp, x = 3.375, s = 1.8689
2.4986x = 
line 70, file mforest.cpp, x = line 703.1875, s = 70, file , file 1.8694
mforest.cpp, x = mforest.cpp6, , s = x = 1.7025
line 4.56, , 70s = s = , file line mforest.cpp, x = 70, file mforest.cpp, x = 4.51.995, s = 
line 70, file mforest.cpp, x = 1.3988line 70, file mforest.cpp
, x = 3.0938, s = 1.8695
4.5, s = 2.22882.0499

4.5line , s = line 70, file mforest.cpp, x = line 3.04697070, file mforest.cpp, x = line 70, file mforest.cpp, file mforest.cpp1.6375, , 3.75, s = s = x = 
line 70, file mforest.cpp2.2343, x = 
3.75, s = 1.8695
1.6417, x = 3.75, s = 2.055

3.75line , s = 70, file mforest.cpp, x = line 70, file mforest.cpp, x = line 3.3753.37570, , , file mforest.cpps = , x = s = 2.0568
1.4024
line 1.643170, file mforest.cpp, x = 
line 70, file mforest.cpp, x = 3.18753.375, line s = 3.37570, s = , file mforest.cpp, x = 2.0573
line 70, file mforest.cpp, x = 3.1875, s = 2.23631.6435

3.0234line , s = line 7070, file , file mforest.cppmforest.cpp, , x = x = , s = 1.8695
3.0938, s = 2.0574
1.4036
line 70, file mforest.cpp, x = 3.0938, s = 1.6436
line 70, file mforest.cpp, x = 3.1875, s = 1.4039
3.1875, s = line 70, file mforest.cpp, line x = 156, file mforest.cpp, Integral = 3.0469, s = 2.23682.0574

line 70, file mforest.cpp, x = 3.0938, s = 1.404
1.8695line 70, file mforest.cpp, x = 
3.0469, s = line 1.6436
70, file mforest.cpp, x = 3.0938, s = 2.2369
line 70, file mforest.cpp, x = 3.0469, s = 1.404
line 70, file mforest.cpp, x = 3.0234, s = 2.0574
line 70, file mforest.cpp, x = 3.0469, s = 2.237
line 156, file mforest.cpp, Integral = 2.0574
line 70, file mforest.cpp, x = 3.0234, s = 1.6436
line 156, file mforest.cpp, Integral = 1.6436
line 70, file mforest.cpp, x = 3.0234, s = 1.404
line 70, file mforest.cpp, x = line 156, file mforest.cpp, Integral = 3.0234, s = 1.404
2.237
line 156, file mforest.cpp, Integral = 2.237
line 293, file mforest.cpp, sleep(1) = 0
line 300, file mforest.cpp, Integral = 2.237
line 300, file mforest.cpp, Integral = 2.0574
line 300, file mforest.cpp, Integral = 1.8695
line 300, file mforest.cpp, Integral = 1.6436
line 300, file mforest.cpp, Integral = 1.404
line 305, file mforest.cpp, S =  2.237 2.0574 1.8695 1.6436 1.404
line 314, file mforest.cpp, f = 833.95
line line 152152, file mforest.cpp, , file lflag = mforest.cpp, 0lflag = 0

line line line 70, file line mforest.cpp152, 152x = , file , file mforest.cpp, mforest.cpplflag = , 0lflag = 0

6, s = line 70, file mforest.cpp, x = 2.7158
152, file mforest.cpp, lflag = 0
6line 70, file mforest.cpp, x = , s = line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 6, s = 1.9944
6line 70, file mforest.cpp, x = , s = 4.5, s = 1.6371
2.2697
line 70, file line mforest.cpp, 70, file mforest.cpp, x = 2.4982x = 
4.5, s = 1.8622line 70, file mforest.cpp
, x = 4.54.5, s = , s = 2.0496
2.2285
line 70, file mforest.cpp, x = line 3.75, s = line 2.2341
6, s = line 70, file mforest.cpp, x = 703.375, s = 2.2361
, file 70, file mforest.cpp, x = mforest.cpp1.7019, x = 
line 70, file mforest.cpp, x = 3.754.5, s = 1.3983
3.75line 70, file mforest.cpp, , x = s = 3.751.6412, s = 
1.4019
line 70, file mforest.cpp, x = 3.375, s = 1.6426
line 70, , file s = mforest.cpp, x = 1.8669line line line 70
3.1875, s = , file mforest.cpp702.2366line 70, file mforest.cpp, x = , 3.375, s = 1.8685x = 
3.375, s = 701.4031, file mforest.cpp, 
x = line 70, file mforest.cpp, x = 
, file 3.1875, s = line 70, file mforest.cpp, x = 3.1875, s = 1.4034
mforest.cpp1.8689
, x = 3.1875, s = 3.75, s = 1.643
line 70, file mforest.cpp, x = 2.0547line 3.0938, s = 
701.869
, file line 70, file mforest.cpp, x = mforest.cpp, x = line 70, file mforest.cpp, x = 3.0938, s = line 3.09381.6431
3.375, s = 2.056570, , file s = mforest.cpp, x = 
line 70, file mforest.cpp, x = 3.0469, s = 1.8691
3.0938, s = 1.40352.2367

line 70, file mforest.cpp, x = 3.1875, s = 2.0569
line 70, file mforest.cpp, x = 3.0469, s = 1.6431
line 70, file mforest.cpp, x = 3.0234, s = 1.8691
line 70, file mforest.cpp, x = line 703.0938, file , s = mforest.cpp, x = 2.0571
line 70, file mforest.cpp, x = line 3.0469, s = 156, file mforest.cpp, Integral = 2.2367
1.8691
3.0469, s = 1.4035
line 70, file mforest.cpp, x = 3.0469, s = 2.0571
line 70, file mforest.cpp, x = 3.0234, s = 1.6431
line 156, file mforest.cpp, Integral = 1.6431
line 70, file mforest.cpp, x = 3.0234, s = 2.2367
line 156, file mforest.cpp, Integral = 2.2367
line 70, file mforest.cpp, x = 3.0234, s = 1.4035
line 156, file mforest.cpp, Integral = 1.4035
line 70, file mforest.cpp, x = 3.0234, s = 2.0571
line 156, file mforest.cpp, Integral = 2.0571
line 293, file mforest.cpp, sleep(1) = 0
line 300, file mforest.cpp, Integral = 2.2367
line 300, file mforest.cpp, Integral = 2.0571
line 300, file mforest.cpp, Integral = 1.8691
line 300, file mforest.cpp, Integral = 1.6431
line 300, file mforest.cpp, Integral = 1.4035
line 305, file mforest.cpp, S =  2.2367 2.0571 1.8691 1.6431 1.4035
line 314, file mforest.cpp, f = 833.75
line 152, file mforest.cpp, lflag = line 0
152, file mforest.cppline 70, file mforest.cpp, x = , lflag = 06, 
s = 2.2645line line 152152, file , file mforest.cpp, lflag = mforest.cpp0, lflag = line 

line 70, file mforest.cpp, x = 0
6, s = line line 2.71317070, file 
mforest.cpp, x = line , file 70, file mforest.cpp, x = mforest.cpp, x = 4.54.5, s = , s = 2.2263
6line 70, file mforest.cpp, s = , x = 152line 1.98843.75
70, file mforest.cpp, x = 1.85796, s = 
1.696
, s = , file line line mforest.cpp70, 70lflag = 2.2319, file 0, file mforest.cpp
mforest.cpp, 
x = 4.5, s = 1.6321
line line line 70line 70, file 70, file mforest.cpp, x = mforest.cpp, , file mforest.cppx = , x = , x = 3.75703.75, , s = , file s = 3.375mforest.cpp1.6362, 
, x = 64.5s = line , 2.233870s = 
, file mforest.cpp, x = 2.494
, s = 3.375line 70, file mforest.cpp, x = , s = 1.3935
1.6377
line line 70, file mforest.cpp, x = 1.86253.1875, s = 1.638
70, file mforest.cpp, x = line 4.5, s = 70, file mforest.cpp, x = 3.75, s = 2.0461
3.1875, s = line 70, file mforest.cpp, x = 
1.3971
line 70, file mforest.cpp, x = 3.75, s = 3.375, s = 2.0513
line 70, file mforest.cpp, x = 2.23433.375
, 1.8642
line 70, file mforest.cpp, x = s = 3.0938, s = 1.6381
line 70, file mforest.cpp, x = 3.0938, 1.3983s = 
2.2345
line 70, file mforest.cpp, x = 3.1875, s = 1.3986
line 70, file mforest.cpp, x = line 3.0469, s = 701.6382, file mforest.cpp, x = line 3.375, s = 702.053, file mforest.cpp, x = 

line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 3.18753.04693.1875, s = , , s = s = 2.05352.2345

line 70, file mforest.cpp, x = 1.8646
3.0938, line s = 70, file mforest.cpp, x = 1.3987
3.0938line , s = 70, file mforest.cpp, x = 2.05363.0938, s = 
1.8647
line 70, file mforest.cpp, x = 3.0234, s = 1.6382
line line 70, file mforest.cpp, 70x = , file mforest.cpp, x = 3.0469, 3.0469line , s = 156, file mforest.cpp, Integral = 1.3987
1.6382
s = line 70, file mforest.cpp, x = 1.8647
line 70, file mforest.cpp, x = 3.0234, s = 3.0469, 2.2345s = 
2.0537
line 156, file mforest.cpp, Integral = 2.2345
line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 3.0234, s = 3.02341.8647, s = 
1.3987
line 156, file mforest.cpp, Integral = 1.8647
line 156, file mforest.cpp, Integral = 1.3987
line 70, file mforest.cpp, x = 3.0234, s = 2.0537
line 156, file mforest.cpp, Integral = 2.0537
line 293, file mforest.cpp, sleep(1) = 0
line 300, file mforest.cpp, Integral = 2.2345
line 300, file mforest.cpp, Integral = 2.0537
line 300, file mforest.cpp, Integral = 1.8647
line 300, file mforest.cpp, Integral = 1.6382
line 300, file mforest.cpp, Integral = 1.3987
line 305, file mforest.cpp, S =  2.2345 2.0537 1.8647 1.6382 1.3987
line 314, file mforest.cpp, f = 831.76
line 152, file mforest.cpp, lflag = 0
line 152, file mforest.cpp, lflag = 0
line 152line , file 152, file mforest.cppmforest.cpp, lflag = , 0lflag = 
0line 70, file mforest.cpp, x = 6, s = 2.685

line 152, file mforest.cpp, lflag = 0
line 70line 70, file , file mforest.cpp, x = mforest.cpp, x = line 70, file mforest.cpp, x = 6, s = 1.63816
, line 70, file mforest.cpp, x = 4.5, s = s = 1.3462
2.4514
line line 70, file mforest.cpp, x = 70, file mforest.cpp, x = 4.5, s = 62.0111
, s = line 70, file line 1.9283
mforest.cpp6, x = , s = 703.75, s = , file mforest.cpp, x = line 702.0161, file 
mforest.cpp, x = 4.5line , 70, file mforest.cpp, x = s = 1.5833.375, 
s = 2.2109line 70, file mforest.cpp, x = 
line 3.752.0179, s = 
70, file mforest.cpp, x = 1.587
line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 4.5, s = 1.814
3.75, s = line 70, file mforest.cpp, x = 3.75, s = 1.8186
line 70, file mforest.cpp, x = 3.375line 3.375, s = 1.8201
4.5, s = , s = line 7070, file mforest.cpp, x = , file mforest.cpp, x = 3.1875, 2.2032s = 1.5884

1.8206line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 3.1875
, 1.3497
line 3.7570, file mforest.cpp, x = , s = line 703.0938, file mforest.cpp, , s = 2.20871.8207x = 

3.375, s = 1.3509
s = line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 3.1875, s = 1.3512
1.5888
line 70, file mforest.cpp, x = 3.0938, s = 1.3513
3.375line 70, file mforest.cpp, x = , s = 3.0938, s = 3.18751.5889
2.2106
, s = 2.0183
line 70, file mforest.cpp, x = line 3.0469, s = 1.351370
line 70line , file mforest.cpp70, x = , file mforest.cpp, , file mforest.cpp, x = 3.0469, s = 1.8207
x = line 3.0469, s = 70, file mforest.cpp, x = 1.5889
3.0938, s = 3.1875, s = 2.0185
2.2111line 70, file 
mforest.cpp, x = 3.0234, s = line 70, file mforest.cpp, x = 1.3513
line 70, file mforest.cpp, x = 3.0234, s = 3.0938, s = 1.8207
2.2112line 156, file mforest.cpp, Integral = 1.3513
line 156, file mforest.cpp, Integral = 
line 70, file mforest.cpp, x = 3.0469, s = 2.0185
1.8207
line 70, file mforest.cpp, x = 3.0234, s = 1.5889
line 70, file mforest.cpp, x = 3.0469, s = 2.2113
line 156, file mforest.cpp, Integral = 1.5889
line 70, file mforest.cpp, x = 3.0234, s = 2.0185
line 70, file mforest.cpp, x = 3.0234, s = 2.2113
line 156, file mforest.cpp, Integral = 2.0185
line 156, file mforest.cpp, Integral = 2.2113
line 293, file mforest.cpp, sleep(1) = 0
line 300, file mforest.cpp, Integral = 2.2113
line 300, file mforest.cpp, Integral = 2.0185
line 300, file mforest.cpp, Integral = 1.8207
line 300, file mforest.cpp, Integral = 1.5889
line 300, file mforest.cpp, Integral = 1.3513
line 305, file mforest.cpp, S =  2.2113 2.0185 1.8207 1.5889 1.3513
line 314, file mforest.cpp, f = 812.49
line 152, file mforest.cpp, lflag = 0
line 152, file mforest.cpp, lflag = 0
line line 70, file mforest.cpp, x = 6line , 152, file mforest.cpp, lflag = 0
s = 70, file mforest.cpp, 1.6524line 70, file mforest.cpp, x = 
x = line line 70, file mforest.cpp, x = 152, file mforest.cpp, lflag = 4.560line 6, 
s = , s = 1522.3067
line 70, file mforest.cpp, x = 1.22716, s = 
line line 70, file mforest.cpp, x = 704.5, s = , file mforest.cpp, x = 1.0103
, file mforest.cpp, lflag = 0
line 70, file mforest.cpp, x = 4.56line , , s = s = 70, file mforest.cpp, x = 1.41.9433
, 
line 70, file s = mforest.cpp, x = 3.75, s = 1.0129
line 70, file mforest.cpp, x = 4.5line , 704.5, file , mforest.cpps = , s = x = 1.1519
1.35791.5953

line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 3.75, line 3.3753.75, s = s = 70, file mforest.cpp, , s = x = 1.5993
1.0138
3.751.1549
line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 3.1875, s = 1.0141
, s = 1.3613
line 70, file mforest.cpp, x = 3.0938, s = 1.0141
1.8925
line line 70, file mforest.cpp, x = 70, file mforest.cpp, x = 3.75, s = 1.8972
3.375, s = line 70, file mforest.cpp, x = 1.6007
3.375line , s = 3.046970, file mforest.cpp, x = , 1.1559s = 
line 1.0141
70, file mforest.cpp, x = 3.375, s = 1.8988
3.375line 70, file mforest.cpp, x = 3.1875, s = , s = 1.8993
line 70, file mforest.cpp, x = 3.1875, s = 1.6011
line 70, file mforest.cpp, x = 3.0938, s = 1.8994
line 70, file mforest.cpp, x = line 70, file mforest.cpp, x = 3.0938, s = 1.6012
3.0234, s = 1.0141
line 156, file mforest.cpp, Integral = 1.0142
line 70, file mforest.cpp, x = 3.0469, s = 1.8994
line 70, file mforest.cpp, x = 3.0469, s = 1.6012
1.3625
line 70, file mforest.cpp, x = 3.1875, s = 1.3629
line 70, file mforest.cpp, x = 3.0938, s = 1.3629
line 70, file mforest.cpp, x = 3.0234, s = 1.8994
line 70, file mforest.cpp, x = line 3.0234156, file mforest.cpp, , s = Integral = 1.60121.8994

line 70, file mforest.cpp, x = 3.0469, s = 1.363
line 156, file mforest.cpp, Integral = 1.6012
line 70, file mforest.cpp, x = 3.1875, s = 1.1562
line 70, file mforest.cpp, x = 3.0938, s = 1.1563
line 70, file mforest.cpp, x = 3.0234, s = 1.363
line 156, file mforest.cpp, Integral = 1.363
line 70, file mforest.cpp, x = 3.0469, s = 1.1563
line 70, file mforest.cpp, x = 3.0234, s = 1.1563
line 156, file mforest.cpp, Integral = 1.1563

press q to quit or c to invoke derivative checker or s to stop optimizing: line 293, file mforest.cpp, sleep(1) = 0
line 300, file mforest.cpp, Integral = 1.8994
line 300, file mforest.cpp, Integral = 1.6012
line 300, file mforest.cpp, Integral = 1.363
line 300, file mforest.cpp, Integral = 1.1563
line 300, file mforest.cpp, Integral = 1.0142
line 305, file mforest.cpp, S =  1.8994 1.6012 1.363 1.1563 1.0142
line 314, file mforest.cpp, f = 694.07
Error closing file gradfil1.tmp
Error closing file gradfil2.tmp
Error closing file varssave.tmp
Error closing file gradfil1.tmp
Error closing file gradfil2.tmp
Error closing file varssave.tmp
Error closing file gradfil1.tmp
Error closing file gradfil2.tmp
Error closing file varssave.tmp
Error closing file gradfil1.tmp
Error closing file gradfil2.tmp
Error closing file varssave.tmp
Error closing file gradfil1.tmp
Error closing file gradfil2.tmp
Error closing file varssave.tmp
